# pdfmod

./: hello.py  pyproject.toml  test.txt
pdfmod/: __main__.py  cli.py
