[project]
name = "pdf-mod"
version = "0.1.0"
description = "A command-line utility for modifying PDFs with ease. Perform common PDF operations such as merging, splitting, compressing, and extracting pages, all from your terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.2.0",
    "typer>=0.15.1",
]
